# xqueue-watcher

./: .gitignore  Automated code Graders With xqueue-watcher.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish-grader-base-image.yml  upgrade-python-requirements.yml
conf.d/: 600.json
deploy/kubernetes/: configmap.yaml  deployment.yaml
grader_support/: Dockerfile.base  README.md  entrypoint.py  gradelib.py
requirements/: production.txt
tests/: test_container_grader.py  test_env_settings.py  test_jailed_grader.py  test_manager.py  test_metrics.py  test_xqueue_client.py
xqueue_watcher/: client.py  containergrader.py  env_settings.py  grader.py  jailedgrader.py  manager.py  metrics.py
